Fix whitespace on Sprint description in sprint board

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,3 +11,11 @@
     color: rgba(51,51,51,0.8) !important;
     border-color:1px solid #a9a9a9;
 }
+
+.ghx-sprint-goal {
+    white-space:pre-wrap;
+}
+
+.ghx-sprint-goal * {
+    white-space:inherit;
+}
